methode flex retravaillé

--- a/index_exercice_10.html
+++ b/index_exercice_10.html
@@ -7,12 +7,12 @@
     <title>CSS exo 10 : blocs couleurs</title>
 </head>
 <body>
-            <div id="mainConteneur">
+            <div id="mainContainer">
                 
                 <div class="bloc1"> </div>
                 <div class="bloc2"> </div>
                 <div class="bloc3"> </div>
-                <div id="conteneur1">
+                <div id="container1">
                     <div class="bloc4"> </div>
                     <div class="bloc5"> </div>
                     <div class="bloc6"> </div>
